--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,6 @@
 .results {
     display: grid;
-    column-gap: 14px;
-    row-gap: 14px;
+    gap: 14px;
     margin-top: 50px;
     justify-content: space-around;
   }
@@ -15,7 +14,7 @@
     width: 30%;
   }
   
-  @media (min-width: 500px) and (max-width: 768px) {
+  @media (width >= 500px) and (width <= 768px) {
     .results {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -24,7 +23,7 @@
     }   
   }
   
-  @media (max-width: 499px) {
+  @media (width <= 499px) {
     .results {
         grid-template-columns: 1fr;
     }    
