--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
-@import "primeflex/primeflex.css";
-@import "primeicons/primeicons.css";
+@import url("primeng/resources/themes/lara-light-blue/theme.css");
+@import url("primeng/resources/primeng.css");
+@import url("primeflex/primeflex.css");
+@import url("primeicons/primeicons.css");
